--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 1.0.0
 environment:
   sdk: '>=2.18.0-271.0.dev <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  shelf: ^1.3.1
 
 dev_dependencies:
   lints: ^2.0.0
