--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   shelf: ^1.3.1
   shelf_modular: ^2.0.0-dev.3
+  postgres: ^2.4.5
 
 dev_dependencies:
   lints: ^2.0.0
