--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   shelf: ^1.3.1
   shelf_modular: ^2.0.0-dev.3
   postgres: ^2.4.5
+  bcrypt: ^1.1.3
 
 dev_dependencies:
   lints: ^2.0.0
