--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   shelf_modular: ^2.0.0-dev.3
   postgres: ^2.4.5
   bcrypt: ^1.1.3
+  dart_jsonwebtoken: ^2.4.1
 
 dev_dependencies:
   lints: ^2.0.0
