--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   postgres: ^2.4.5
   bcrypt: ^1.1.3
   dart_jsonwebtoken: ^2.4.1
+  shelf_swagger_ui: ^1.0.0+2
 
 dev_dependencies:
   lints: ^2.0.0
